Uploaded logo for use in header. Added block content to footer; adjusted footer size.

--- a/css/layout-fixed.css
+++ b/css/layout-fixed.css
@@ -42,10 +42,11 @@ body {
  * Header
  */
 #header {
+  height:150px;
 }
 
 #header .section {
-  padding-left:20px;
+  padding:0px;
 }
 
 #search-box {
